--- a/includes/index.pug
+++ b/includes/index.pug
@@ -385,6 +385,11 @@ block content
             span.badge.badge-danger Обновки в закладках: v.2019-04-04
         ul
           li
+            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://www.ukrinform.ru/rubric-economy/2673413-pravitelstvo-obazalo-naftogaz-snizit-cenu-na-gaz-dla-naselenia.html', target='_blank') Упадет цена на ГАЗ!
+            div.icontooinfo.a0repa3(title='За апрель будем уже платить по 8.38грн./куб (была цена 8.55грн./куб)', alt='')
+          li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.telemetr.me
             a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
@@ -449,11 +454,6 @@ block content
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://www.bbc.com/ukrainian/features-russian-41112484', target='_blank') ТВ-карта Украины
             div.icontooinfo.a0repa3(title='Какие каналы ТВ на кого работают. Кто с чем подходит к выборам.', alt='')
-          li
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
-            div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://www.youtube.com/watch?v=A25RRbUh4Ws', target='_blank') Список виборців
-            div.icontooinfo.a0repa3(title='Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.florium.ua
