--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -62,7 +62,7 @@ block content
           li
             div.icon.kiroe.com.ua
             a(href='http://kiroe.com.ua/', target='_blank') kiroe.com
-            span.opisi Кабин.Кир.обленерго
+            span.opisi Кабин.обленерго.стар
       .group
         .group-title
           span.badge.badge-success Вода
