--- a/includes/city.pug
+++ b/includes/city.pug
@@ -16,6 +16,10 @@ block content
           span.badge.badge-success Новомиргород
         ul
           li
+            div.icon.forum.zakladki
+            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА
+            div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п.', alt='')
+          li
             div.icon.google.maps
             a(href='https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633', target='_blank') Карта Новомиргорода
           li
