--- a/includes/index.pug
+++ b/includes/index.pug
@@ -176,9 +176,9 @@ block content
             a(href='https://index.minfin.com.ua/tariff/electric/', target='_blank') minfin.com
             span.opisi оф.цена.электр.
           li
-            div.icon.kiroe.com.ua
-            a(href='http://kiroe.com.ua/', target='_blank') kiroe
-            span.opisi Кабин.Кир.обленерго
+            div.icon.kresc.com.ua
+            a(href='http://kresc.com.ua/payment.html', target='_blank') kresc.com.ua
+            span.opisi Електро.ОЕК
           li
             div.icon.ukrtelecom.ua
             a(href='https://new.ukrtelecom.ua/payment/#generate-bill', target='_blank') ukrtelecom
@@ -346,6 +346,10 @@ block content
             span.badge.badge-dark Городок/Новомиргород
         ul
           li
+            div.icon.forum.zakladki
+            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА
+            div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п.', alt='')
+          li
             div.icon.google.maps
             a(href='https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633', target='_blank') Карта Новомиргорода
           li
@@ -384,6 +388,11 @@ block content
           a(href='http://zakladki.at.ua/', target='_blank')
             span.badge.badge-danger Обновки в закладках: v.2019-04-04
         ul
+          li
+            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.forum.zakladki
+            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА
+            div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
@@ -464,11 +473,6 @@ block content
             div.icon.med-magazin.ua
             a(href='https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c', target='_blank') med-magazin.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.master-plus.com.ua
-            a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс', alt='')
           // тут реклама от ГУГЛ
           //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           //- ins.adsbygoogle(style='display:inline-block;width:250px;height:360px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='8204636692')
