--- a/includes/index.pug
+++ b/includes/index.pug
@@ -389,7 +389,7 @@ block content
             span.badge.badge-danger Обновки в закладках: v.2019-04-04
         ul
           li
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.forum.zakladki
             a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА
             div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам', alt='')
