--- a/includes/media.pug
+++ b/includes/media.pug
@@ -19,14 +19,16 @@ block content
           li
             div.icon.a0download 
             a() Скачать:
-            a(href='https://turbo.to/m8kdm5toer7h.html', target='_blank')
+            a(href='https://turbo.to/zrzpjo2fwvrd.html', target='_blank')
               div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://turbo.to/lfpz10mc11cz.html', target='_blank')
+            a(href='https://turbo.to/jnszk7degb16.html', target='_blank')
               div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
-            a(href='https://turbo.to/7trgjc8n6q8u.html', target='_blank')
+            a(href='https://turbo.to/5b0adfddeqzh.html', target='_blank')
               div.icontooinfo.a-3_cifra(title='Скачать 3-ю часть', alt='')
-            a(href='https://turbo.to/83ms14po83fu.html', target='_blank')
+            a(href='https://turbo.to/06vnr9ys7llg.html', target='_blank')
               div.icontooinfo.a-4_cifra(title='Скачать 4-ю часть', alt='')
+            a(href='https://turbo.to/r2me6l6gk4uj.html', target='_blank')
+              div.icontooinfo.a-5_cifra(title='Скачать 5-ю часть', alt='')
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
             a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
