--- a/includes/index.pug
+++ b/includes/index.pug
@@ -386,12 +386,12 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2019-04-04
+            span.badge.badge-danger Обновки в закладках: v.2019-04-28
         ul
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.forum.zakladki
-            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА
+            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА (обновлено)
             div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
