--- a/includes/index.pug
+++ b/includes/index.pug
@@ -391,7 +391,7 @@ block content
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.forum.zakladki
-            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА+
+            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') Н.КОМУНАЛКА+зміни
             div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
