--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -306,7 +306,7 @@ block content
             a(href='https://letyshops.com/r/tickets-ua-4qh7st5ct0kk08', target='_blank') tickets.ua`
           li
             div.icon.hotels24.ua
-            a(href='https://letyshops.com/r/hotels24-4qh7st5ct0kk08', target='_blank') hotels24.ua`
+            a(href='https://hotels24.ua/', target='_blank') hotels24.ua
           li
             div.icon.rentalcars.com
             a(href='https://letyshops.com/r/rentalcars-4qh7st5ct0qok0', target='_blank') rentalcars.com`
