--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -37,6 +37,18 @@ block content
           li
             div.icon.old.kurs.com.ua
             a(href='https://old.kurs.com.ua/webmoney', target='_blank') old.kurs.com.ua
+      .group
+        .group-title
+          span.badge.badge-success Торговые площадки (фиат+криптовалюта)
+        ul    
+          li
+            div.icon.tradingview_com
+            a(href='https://ru.tradingview.com/', target='_blank') tradingview.com
+            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView', alt='')        
+          li
+            div.icon.exmo_com
+            a(href='https://exmo.com/?ref=1654818', target='_blank') exmo.com`
+            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Биткоин биржа и трейдинг платформа', alt='')
           li
             div.icon.bitfinex.com
             a(href='https://www.bitfinex.com/?locale=ru', target='_blank') bitfinex.com
