--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -103,6 +103,13 @@ block content
             a(href='http://www.my.ukrtelecom.ua/', target='_blank') my.ukrtelecom
             span.opisi КАБИНЕТ
           li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.my.vega.ua
+            a(href='https://my.vega.ua/', target='_blank') Vega Telecom
+            div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
+            a(href='https://youtu.be/4accV-xUU30', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+          li
             div.icon.novom.ulan.in.ua
             a(href='http://novom.ulan.in.ua/', target='_blank') novom.ulan.in.ua
             span.opisi Ulan ISP
