--- a/includes/index.pug
+++ b/includes/index.pug
@@ -184,6 +184,12 @@ block content
             a(href='https://new.ukrtelecom.ua/payment/#generate-bill', target='_blank') ukrtelecom
             span.opisi Укртел.СЧЕТ
           li
+            div.icon.my.vega.ua
+            a(href='https://my.vega.ua/', target='_blank') Vega Telecom
+            div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
+            a(href='https://youtu.be/4accV-xUU30', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+          li
             div.icon.kyivstar.ua
             a(href='https://kyivstar.ua/', target='_blank') kyivstar.ua
           li
@@ -386,8 +392,25 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2019-04-28
+            span.badge.badge-danger Обновки в закладках: v.2019-05-07
         ul
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.my.vega.ua
+            a(href='https://my.vega.ua/', target='_blank') Vega Telecom
+            div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
+            a(href='https://youtu.be/4accV-xUU30', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.exmo_com
+            a(href='https://exmo.com/?ref=1654818', target='_blank') exmo.com`
+            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Надежная биткоин биржа и трейдинг платформа стран СНГ', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.watsons.ua
+            a(href='https://letyshops.com/r/watsons-ua-4qh7st6a66ucwo', target='_blank') watsons.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Товари для краси та здоровя Інтернет-магазина Watsons Україна', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.forum.zakladki
@@ -458,21 +481,7 @@ block content
             div.icon.costaction.com
             a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Хранилище файлов`
             div.icontooinfo.a0repa3(title='Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!', alt='')
-          li
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://www.bbc.com/ukrainian/features-russian-41112484', target='_blank') ТВ-карта Украины
-            div.icontooinfo.a0repa3(title='Какие каналы ТВ на кого работают. Кто с чем подходит к выборам.', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.florium.ua
-            a(href='https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc', target='_blank') florium.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине.', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.med-magazin.ua
-            a(href='https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c', target='_blank') med-magazin.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
+
           // тут реклама от ГУГЛ
           //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           //- ins.adsbygoogle(style='display:inline-block;width:250px;height:360px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='8204636692')
