--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -216,6 +216,10 @@ block content
             div.icon.bomond.com.ua
             a(href='https://bomond.com.ua/', target='_blank') bomond.com.ua
           li
+            div.icon.watsons.ua
+            a(href='https://letyshops.com/r/watsons-ua-4qh7st6a66ucwo', target='_blank') watsons.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Товари для краси та здоровя Інтернет-магазина Watsons Україна', alt='')
+          li
             div.icon.ostrivkrasy.com
             a(href='https://letyshops.com/r/ostriv-krasi-4qh7st5csyyo0g', target='_blank') ostrivkrasy.com`
           li
