--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -94,6 +94,8 @@ block content
             div.icon.ukrtelecom.ua
             a(href='https://new.ukrtelecom.ua/payment/#generate-bill', target='_blank') ukrtelecom
             span.opisi СЧЕТ
+            a(href='https://youtu.be/WYhA_JFRVik', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
             div.icon.ukrtelecom.ua
             a(href='http://cc.ukrtele.com/', target='_blank') cc.ukrtele.com
@@ -109,6 +111,8 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
             a(href='https://youtu.be/4accV-xUU30', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+            a(href='https://youtu.be/nsknyxq9alo', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
             div.icon.novom.ulan.in.ua
             a(href='http://novom.ulan.in.ua/', target='_blank') novom.ulan.in.ua
