--- a/includes/index.pug
+++ b/includes/index.pug
@@ -183,12 +183,16 @@ block content
             div.icon.ukrtelecom.ua
             a(href='https://new.ukrtelecom.ua/payment/#generate-bill', target='_blank') ukrtelecom
             span.opisi Укртел.СЧЕТ
+            a(href='https://youtu.be/WYhA_JFRVik', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
             div.icon.my.vega.ua
             a(href='https://my.vega.ua/', target='_blank') Vega Telecom
             div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
             a(href='https://youtu.be/4accV-xUU30', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+            a(href='https://youtu.be/nsknyxq9alo', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
             div.icon.kyivstar.ua
             a(href='https://kyivstar.ua/', target='_blank') kyivstar.ua
@@ -401,6 +405,8 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
             a(href='https://youtu.be/4accV-xUU30', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+            a(href='https://youtu.be/nsknyxq9alo', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.exmo_com
