--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -154,6 +154,10 @@ block content
           li
             div.icon.avtodiski.net.ua
             a(href='https://letyshops.com/r/avtodiski-ua-4qh7st5csygwc8', target='_blank') avtodiski.net.ua`
+          li
+            div.icon.dok.dbroker.com.ua
+            a(href='https://letyshops.com/r/dok-ua-4qh7st6ahuecw8', target='_blank') dok.dbroker.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине.', alt='')
     .col-sm
       .group
         .group-title
