--- a/includes/index.pug
+++ b/includes/index.pug
@@ -396,8 +396,13 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2019-05-07
+            span.badge.badge-danger Обновки в закладках: v.2019-05-08
         ul
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.dok.dbroker.com.ua
+            a(href='https://letyshops.com/r/dok-ua-4qh7st6ahuecw8', target='_blank') dok.dbroker.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине.', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.my.vega.ua
@@ -462,16 +467,6 @@ block content
             div.icon.maximoda.com.ua
             a(href='https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c', target='_blank') maximoda.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.garnamama.com
-            a(href='https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk', target='_blank') garnamama.com`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине', alt='')
-          li
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
-            div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://www.youtube.com/watch?v=4cZAhBPkCVU', target='_blank') Прикол на ВЫБОРАХ
-            div.icontooinfo.a0repa3(title='У селі на Рівненщині понад 2,5 тисячі жителів носять однакове прізвище', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
