--- a/includes/social.pug
+++ b/includes/social.pug
@@ -51,8 +51,8 @@ block content
             span.opisi 79р.+top250р.
 
           // тут реклама от ГУГЛ - 3 колонки-вконце 336-280
-          script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          ins.adsbygoogle(style='display:inline-block;width:336px;height:280px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='7850904161')
+            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+          ins.adsbygoogle(style='display:inline-block;width:336px;height:280px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='3116540473')
           script.
             (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
@@ -111,9 +111,9 @@ block content
           li
             div.icon.odnogrupniki.com.ua
             a(href='https://odnogrupniki.com.ua/reg32138', target='_blank') Odnogrupniki.com.ua`
-          // тут реклама от ГУГЛ - 3 колонки 32050+
-          script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='1111124042')
+          // тут реклама от ГУГЛ - 3 колонки 320+50
+            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+          ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='5338066053')
           script.
             (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
@@ -174,9 +174,9 @@ block content
           li
             div.icon.mail.ex.ua
             a(href='https://mail.ex.ua/', target='_blank') mail.ex.ua
-          // тут реклама от ГУГЛ - 3 колонки 32050+
-          script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='1111124042')
+          // тут реклама от ГУГЛ - 3 колонки 320+50
+            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+          ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='5338066053')
           script.
             (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
