--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -39,16 +39,20 @@ block content
             a(href='https://old.kurs.com.ua/webmoney', target='_blank') old.kurs.com.ua
       .group
         .group-title
-          span.badge.badge-success Торговые площадки (фиат+криптовалюта)
+          span.badge.badge-success Торговые площадки криптовалюты
         ul    
           li
             div.icon.tradingview_com
             a(href='https://ru.tradingview.com/', target='_blank') tradingview.com
-            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView', alt='')        
+            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Полезный инструмент - графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView', alt='')        
+          li
+            div.icon.binance_com
+            a(href='https://www.binance.com/?ref=36762801', target='_blank') binance.com`
+            div.icontooinfo.a0repa3(title='Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют', alt='')
           li
             div.icon.exmo_com
             a(href='https://exmo.com/?ref=1654818', target='_blank') exmo.com`
-            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Биткоин биржа и трейдинг платформа', alt='')
+            div.icontooinfo.a0repa3(title='Раздел-Банкинг. ТОП биткоин биржа и трейдинг платформа. Возможность работы с грн. руб. visa, mastercart', alt='')
           li
             div.icon.bitfinex.com
             a(href='https://www.bitfinex.com/?locale=ru', target='_blank') bitfinex.com
