--- a/includes/index.pug
+++ b/includes/index.pug
@@ -400,6 +400,11 @@ block content
         ul
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.binance_com
+            a(href='https://www.binance.com/?ref=36762801', target='_blank') binance.com`
+            div.icontooinfo.a0repa3(title='Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.dok.dbroker.com.ua
             a(href='https://letyshops.com/r/dok-ua-4qh7st6ahuecw8', target='_blank') dok.dbroker.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине.', alt='')
