--- a/includes/index.pug
+++ b/includes/index.pug
@@ -396,8 +396,13 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2019-05-08
+            span.badge.badge-danger Обновки в закладках: v.2019-06-30
         ul
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.a0youtubeinform(title='Видео информация', alt='')
+            a(href='https://zakladki.github.io/media.html', target='_blank') Добавлены MP3 плееры
+            div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.binance_com
@@ -472,11 +477,6 @@ block content
             div.icon.maximoda.com.ua
             a(href='https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c', target='_blank') maximoda.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://zakladki.github.io/media.html', target='_blank') Обновлен MP3 плеер
-            div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания зарубежной музыки', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
