--- a/includes/media.pug
+++ b/includes/media.pug
@@ -19,15 +19,15 @@ block content
           li
             div.icon.a0download 
             a() Скачать:
-            a(href='https://turbo.to/tf88zuhcvaml.html', target='_blank')
+            a(href='https://.html', target='_blank')
               div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://turbo.to/ggqp9mnjvefq.html', target='_blank')
+            a(href='https://.html', target='_blank')
               div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
-            a(href='https://turbo.to/srlsd6rjg34g.html', target='_blank')
+            a(href='https://.html', target='_blank')
               div.icontooinfo.a-3_cifra(title='Скачать 3-ю часть', alt='')
-            a(href='https://turbo.to/569n4spdei4i.html', target='_blank')
+            a(href='https://.html', target='_blank')
               div.icontooinfo.a-4_cifra(title='Скачать 4-ю часть', alt='')
-            a(href='https://turbo.to/m9kirfcq9s3s.html', target='_blank')
+            a(href='https://.html', target='_blank')
               div.icontooinfo.a-5_cifra(title='Скачать 5-ю часть', alt='')
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
             a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
@@ -38,7 +38,6 @@ block content
             #player(style='height:60px;width:240px')
               script.
                 var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});
-
 
       .group
         .group-title
@@ -76,6 +75,27 @@ block content
     .col-sm
       .group
         .group-title
+          span.badge.badge-warning Плеер.ТОП.украинская playlist.2019.06
+        ul
+          
+          li
+            div.icon.a0download 
+            a() Скачать:
+            a(href='https://.html', target='_blank')
+              div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
+            a(href='https://.html', target='_blank')
+              div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
+          
+          li
+            // тут код плеера
+            #player(style='height:60px;width:240px')
+              script.
+                var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist3ua.txt"});
+        
+        
           span.badge.badge-success Все о Кино
         ul
           li
@@ -117,6 +137,26 @@ block content
     .col-sm
       .group
         .group-title
+          span.badge.badge-warning Плеер.ТОП.русская playlist.2019.06
+        ul
+          
+          li
+            div.icon.a0download 
+            a() Скачать:
+            a(href='https://.html', target='_blank')
+              div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
+            a(href='https://.html', target='_blank')
+              div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
+          
+          li
+            // тут код плеера
+            #player(style='height:60px;width:240px')
+              script.
+                var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist2ru.txt"});
+              
           span.badge.badge-success Радио онлайн
         ul
           li
