--- a/includes/media.pug
+++ b/includes/media.pug
@@ -35,9 +35,9 @@ block content
           
           li
             // тут код плеера
-            #player(style='height:60px;width:240px')
+            #player_zap(style='height:60px;width:240px')
               script.
-                var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});
+                var player_zap = new Playerjs({id:"player_zap", file:"https://zakladki.github.io/playlist1zap.txt"});
 
       .group
         .group-title
@@ -91,9 +91,9 @@ block content
           
           li
             // тут код плеера
-            #player(style='height:60px;width:240px')
+            #player_ua(style='height:60px;width:240px')
               script.
-                var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist3ua.txt"});
+                var player_ua = new Playerjs({id:"player_ua", file:"https://zakladki.github.io/playlist3ua.txt"});
         
         
           span.badge.badge-success Все о Кино
@@ -153,9 +153,9 @@ block content
           
           li
             // тут код плеера
-            #player(style='height:60px;width:240px')
+            #player_ru(style='height:60px;width:240px')
               script.
-                var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist2ru.txt"});
+                var player_ru = new Playerjs({id:"player_ru", file:"https://zakladki.github.io/playlist2ru.txt"});
               
           span.badge.badge-success Радио онлайн
         ul
