--- a/includes/media.pug
+++ b/includes/media.pug
@@ -19,15 +19,15 @@ block content
           li
             div.icon.a0download 
             a() Скачать:
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/pzqefb54uvmh.html', target='_blank')
               div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/oy2jues1xkhj.html', target='_blank')
               div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/orjbogd03t67.html', target='_blank')
               div.icontooinfo.a-3_cifra(title='Скачать 3-ю часть', alt='')
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/v116pgy2es6p.html', target='_blank')
               div.icontooinfo.a-4_cifra(title='Скачать 4-ю часть', alt='')
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/sw906losh8mx.html', target='_blank')
               div.icontooinfo.a-5_cifra(title='Скачать 5-ю часть', alt='')
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
             a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
@@ -81,9 +81,9 @@ block content
           li
             div.icon.a0download 
             a() Скачать:
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/15j9ntij07n3.html', target='_blank')
               div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/fbygpo6o312s.html', target='_blank')
               div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
             a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
@@ -95,7 +95,8 @@ block content
               script.
                 var player_ua = new Playerjs({id:"player_ua", file:"https://zakladki.github.io/playlist3ua.txt"});
         
-        
+      .group
+        .group-title
           span.badge.badge-success Все о Кино
         ul
           li
@@ -143,9 +144,9 @@ block content
           li
             div.icon.a0download 
             a() Скачать:
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/me7zzjp6a66o.html', target='_blank')
               div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://.html', target='_blank')
+            a(href='https://turbo.to/7a9lxi31ntep.html', target='_blank')
               div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
             a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
@@ -156,7 +157,9 @@ block content
             #player_ru(style='height:60px;width:240px')
               script.
                 var player_ru = new Playerjs({id:"player_ru", file:"https://zakladki.github.io/playlist2ru.txt"});
-              
+                
+      .group
+        .group-title  
           span.badge.badge-success Радио онлайн
         ul
           li
