--- a/includes/media.pug
+++ b/includes/media.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер.ТОП.зарубежная playlist.2019.04
+          span.badge.badge-warning Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2019.04)
         ul
           
           li
@@ -75,7 +75,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер.ТОП.украинская playlist.2019.06
+          span.badge.badge-warning Плеер.ТОП.УКРАИНСКАЯ (playlist.2019.06)
         ul
           
           li
@@ -138,7 +138,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер.ТОП.русская playlist.2019.06
+          span.badge.badge-warning Плеер.ТОП.РУССКАЯ (playlist.2019.06)
         ul
           
           li
