--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -33,7 +33,7 @@ block content
             span.opisi цена.газ
           li
             div.icon.naftogazpostach.com
-            a(href='https://naftogazpostach.com/', target='_blank') naftogaz
+            a(href='https://gas.ua/', target='_blank') naftogaz
             span.opisi Кабин.Газ.2019
           li
             div.icon.gasolina-online.com
@@ -121,6 +121,10 @@ block content
             div.icon.shtorm.net
             a(href='https://www.shtorm.net/uk', target='_blank') shtorm.net
             span.opisi Shtorm
+          li
+            div.icon.skylink_vk
+            a(href='http://sky-link.com.ua/', target='_blank') sky-link.com.ua
+            span.opisi Sky-link
       .group
         .group-title
           span.badge.badge-success Интернет-мобильный
