--- a/includes/index.pug
+++ b/includes/index.pug
@@ -169,7 +169,7 @@ block content
             span.opisi оф.цена.газ
           li
             div.icon.naftogazpostach.com
-            a(href='https://naftogazpostach.com/', target='_blank') naftogaz
+            a(href='https://gas.ua/', target='_blank') naftogaz
             span.opisi Кабин.Газ.2019
           li
             div.icon.minfin.com.ua
@@ -193,6 +193,10 @@ block content
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
             a(href='https://youtu.be/nsknyxq9alo', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
+          li
+            div.icon.skylink_vk
+            a(href='http://sky-link.com.ua/', target='_blank') sky-link.com.ua
+            span.opisi Sky-link
           li
             div.icon.kyivstar.ua
             a(href='https://kyivstar.ua/', target='_blank') kyivstar.ua
