--- a/includes/media.pug
+++ b/includes/media.pug
@@ -202,7 +202,7 @@ block content
             i.fainfo.fab.fa-telegram
           li
             div.icon.web.telegram.org
-            a(href='https://t.me/music_hit_zakladki', target='_blank') t/music_hit_zakladki
+            a(href='https://t.me/music_hitok', target='_blank') t/music_HitOK (hit_bit)
             i.fainfo.fab.fa-telegram
       .group
         .group-title
