--- a/includes/index.pug
+++ b/includes/index.pug
@@ -298,8 +298,8 @@ block content
             div.icon.rozetka.com.ua
             a(href='https://letyshops.com/r/rozetka-4qh7st5csxa88w', target='_blank') rozetka.com.ua`
           li
-            div.icon.allo.ua
-            a(href='https://letyshops.com/r/allo-4qh7st5csxicso', target='_blank') allo.ua`
+            div.icon.stylus.ua
+            a(href='https://letyshops.com/r/stylus-4qh7st5csxogcc', target='_blank') stylus.ua`
           li
             div.icon.eldorado.ua
             a(href='https://letyshops.com/r/eldorado-ua-4qh7st5csxicso', target='_blank') eldorado.ua`
@@ -313,8 +313,8 @@ block content
             div.icon.bonprix.ua
             a(href='https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8', target='_blank') bonprix.ua`
           li
-            div.icon.apteka911.com.ua
-            a(href='https://letyshops.com/r/apteka-911-4qh7st5ct08woo', target='_blank') apteka911.com.ua`
+            div.icon.apteka24.ua
+            a(href='https://letyshops.com/r/apteka24-4qh7st5ct0cggg', target='_blank') apteka24.ua`
       .group
         .group-title
           a(href='/others.html')
@@ -470,11 +470,6 @@ block content
             div.icon.telemart.ua
             a(href='https://', target='_blank') telemart.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.avic.ua
-            a(href='https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc', target='_blank') avic.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.dressa.com.ua
