--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -83,7 +83,7 @@ block content
             a(href='https://letyshops.com/r/rozetka-4qh7st5csxa88w', target='_blank') rozetka.com.ua`
           li
             div.icon.allo.ua
-            a(href='https://letyshops.com/r/allo-4qh7st5csxicso', target='_blank') allo.ua`
+            a(href='https://allo.ua', target='_blank') allo.ua
           li
             div.icon.eldorado.ua
             a(href='https://letyshops.com/r/eldorado-ua-4qh7st5csxicso', target='_blank') eldorado.ua`
@@ -104,7 +104,7 @@ block content
             a(href='https://letyshops.com/r/f-ua-tot-samyi-magazin-4qh7st5csy04gw', target='_blank') f.ua`
           li
             div.icon.comfy.ua
-            a(href='https://letyshops.com/r/comfy-ua-4qh7st5csy2o8s', target='_blank') comfy.ua`
+            a(href='https://comfy.ua', target='_blank') comfy.ua
           li
             div.icon.xiaomi.ua
             a(href='https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o', target='_blank') xiaomi.ua`
@@ -117,7 +117,7 @@ block content
             a(href='https://letyshops.com/r/kyivstar-4qh7st5ct12cog', target='_blank') shop.kyivstar.ua`
           li
             div.icon.avic.ua
-            a(href='https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc', target='_blank') avic.ua`
+            a(href='https://avic.ua', target='_blank') avic.ua
             div.icontooinfo.a0repa3(title='Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!', alt='')
           li
             div.icon.coffeeok.com.ua
@@ -150,7 +150,7 @@ block content
             a(href='https://www.autoklad.ua/', target='_blank') autoklad.ua
           li
             div.icon.avtoopt.in.ua
-            a(href='https://letyshops.com/r/avtoopt-ua-4qh7st5csyeckc', target='_blank') avtoopt.in.ua`
+            a(href='https://avtoopt.in.ua', target='_blank') avtoopt.in.ua
           li
             div.icon.avtodiski.net.ua
             a(href='https://letyshops.com/r/avtodiski-ua-4qh7st5csygwc8', target='_blank') avtodiski.net.ua`
@@ -207,7 +207,7 @@ block content
             a(href='https://letyshops.com/r/berni-4qh7st5cszy8k4', target='_blank') berni.com.ua`
           li
             div.icon.garnamama.com
-            a(href='https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk', target='_blank') garnamama.com`
+            a(href='https://garnamama.com', target='_blank') garnamama.com
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине', alt='')
       .group
         .group-title
@@ -228,7 +228,7 @@ block content
             a(href='https://letyshops.com/r/ostriv-krasi-4qh7st5csyyo0g', target='_blank') ostrivkrasy.com`
           li
             div.icon.edp.ua
-            a(href='https://letyshops.com/r/eau-de-parfum-ua-4qh7st5csz6sk8', target='_blank') edp.ua`
+            a(href='https://edp.ua', target='_blank') edp.ua
           li
             div.icon.nyxcosmetic.com.ua
             a(href='https://letyshops.com/r/nyx-professional-makeup-ua-4qh7st5cszacc4', target='_blank') nyxcosmetic.com.ua`
@@ -251,7 +251,7 @@ block content
         ul
           li
             div.icon.apteka911.com.ua
-            a(href='https://letyshops.com/r/apteka-911-4qh7st5ct08woo', target='_blank') apteka911.com.ua`
+            a(href='https://apteka911.com.ua', target='_blank') apteka911.com.ua
           li
             div.icon.apteka24.ua
             a(href='https://letyshops.com/r/apteka24-4qh7st5ct0cggg', target='_blank') apteka24.ua`
@@ -289,13 +289,13 @@ block content
             a(href='https://letyshops.com/r/yakaboo-4qh7st5cszy8k4', target='_blank') yakaboo.ua`
           li
             div.icon.grenka.ua
-            a(href='https://letyshops.com/r/grenka-ua-4qh7st5ct02sc0', target='_blank') grenka.ua`
+            a(href='https://grenka.ua', target='_blank') grenka.ua
           li
             div.icon.bambook.com
             a(href='https://letyshops.com/r/bambook-ua-4qh7st5ct06c4w', target='_blank') bambook.com`
           li
             div.icon.booklya.ua
-            a(href='https://letyshops.com/r/booklya-ua-4qh7st5ct06c4w', target='_blank') booklya.ua`
+            a(href='https://www.booklya.ua', target='_blank') booklya.ua
           li
             div.icon.book24.ua
             a(href='https://letyshops.com/r/book24-ua-4qh7st5ct08woo', target='_blank') book24.ua`
