--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -73,6 +73,10 @@ block content
           li
             div.icon.ebay.com
             a(href='https://letyshops.com/r/ebay-4qh7st5csx6og0', target='_blank') ebay.com`
+          li
+            div.icon.russian.alibaba.com
+            a(href='https://letyshops.com/r/alibaba-4qh7st7rrfuo0g', target='_blank') russian.alibaba.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Алибаба Alibaba, крупнейшая в мире онлайн B2B торговая платформа. Алибаба предлагает качественных производителей, поставщиков, экспортеров, импортеров, покупателей, оптовиков и товары.', alt='')
     .col-sm
       .group
         .group-title
@@ -105,6 +109,10 @@ block content
           li
             div.icon.comfy.ua
             a(href='https://comfy.ua', target='_blank') comfy.ua
+          li
+            div.icon.citrus.ua
+            a(href='https://letyshops.com/r/citrus-ua-4qh7st7rrmskgo', target='_blank') citrus.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Цитрус — гаджеты и аксессуары', alt='')
           li
             div.icon.xiaomi.ua
             a(href='https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o', target='_blank') xiaomi.ua`
@@ -186,6 +194,10 @@ block content
             div.icon.dressa.com.ua
             a(href='https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk', target='_blank') dressa.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя.', alt='')
+          li
+            div.icon.cardo.ua
+            a(href='https://letyshops.com/r/cardo-4qh7st7rrpuso8', target='_blank') cardo.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине.', alt='')
       .group
         .group-title
           span.badge.badge-success Детские товары
