--- a/includes/index.pug
+++ b/includes/index.pug
@@ -404,8 +404,28 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2019-06-30
+            span.badge.badge-danger Обновки в закладках: v.2019-09-19
         ul
+          li
+            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://gas.ua/ua/gas/article/pobutovi-spozhivachi-mozhut-zekonomiti-do-25-na-oplati-za-gaz', target='_blank') ГАЗОВИЙ ЗАПАС
+            div.icontooinfo.a0repa3(title='ГАЗОВИЙ ЗАПАС - ПЛАТІТЬ ЗА ГАЗ ДО 25% МЕНШЕ. Побутові споживачі можуть зекономити до 25% на оплаті за газ', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.cardo.ua
+            a(href='https://letyshops.com/r/cardo-4qh7st7rrpuso8', target='_blank') cardo.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине.', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.citrus.ua
+            a(href='https://letyshops.com/r/citrus-ua-4qh7st7rrmskgo', target='_blank') citrus.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Цитрус — гаджеты и аксессуары', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.russian.alibaba.com
+            a(href='https://letyshops.com/r/alibaba-4qh7st7rrfuo0g', target='_blank') russian.alibaba.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Алибаба Alibaba, крупнейшая в мире онлайн B2B торговая платформа. Алибаба предлагает качественных производителей, поставщиков, экспортеров, импортеров, покупателей, оптовиков и товары.', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
@@ -416,11 +436,6 @@ block content
             div.icon.binance_com
             a(href='https://www.binance.com/?ref=36762801', target='_blank') binance.com`
             div.icontooinfo.a0repa3(title='Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.dok.dbroker.com.ua
-            a(href='https://letyshops.com/r/dok-ua-4qh7st6ahuecw8', target='_blank') dok.dbroker.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине.', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.my.vega.ua
@@ -437,19 +452,9 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Банкинг. Надежная биткоин биржа и трейдинг платформа стран СНГ', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.watsons.ua
-            a(href='https://letyshops.com/r/watsons-ua-4qh7st6a66ucwo', target='_blank') watsons.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Товари для краси та здоровя Інтернет-магазина Watsons Україна', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.forum.zakladki
             a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') Н.КОМУНАЛКА+зміни
             div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам', alt='')
-          li
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://www.ukrinform.ru/rubric-economy/2673413-pravitelstvo-obazalo-naftogaz-snizit-cenu-na-gaz-dla-naselenia.html', target='_blank') Упадет цена на ГАЗ!
-            div.icontooinfo.a0repa3(title='За апрель будем уже платить по 8.38грн./куб (была цена 8.55грн./куб)', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.telemetr.me
@@ -460,26 +465,6 @@ block content
             div.icon.ru.airbnb.com
             a(href='https://letyshops.com/r/airbnb-4qh7st5x4ayoc0', target='_blank') ru.airbnb.com`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. ', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.starkbud.com.ua
-            a(href='https://letyshops.com/r/starkbud-ua-4qh7st5x3rwgk4', target='_blank') starkbud.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Строительные материалы по лучшим ценам - интернет-магазин СтаркБуд', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.telemart.ua
-            a(href='https://', target='_blank') telemart.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.dressa.com.ua
-            a(href='https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk', target='_blank') dressa.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя.', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.maximoda.com.ua
-            a(href='https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c', target='_blank') maximoda.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
