--- a/includes/media.pug
+++ b/includes/media.pug
@@ -39,6 +39,12 @@ block content
               script.
                 var player_zap = new Playerjs({id:"player_zap", file:"https://zakladki.github.io/playlist1zap.txt"});
 
+          li
+            div.icon.web.telegram.org
+            a() Слушать и качать:
+            a(href='https://t.me/music_hitok', target='_blank') music_HitOK
+            i.fainfo.fab.fa-telegram
+
       .group
         .group-title
           span.badge.badge-success Ваше любимое видео!
@@ -198,11 +204,11 @@ block content
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
           li
             div.icon.web.telegram.org
-            a(href='https://t.me/music_breakbeat', target='_blank') t/music_breakbeat (hit_bit)
+            a(href='https://t.me/music_breakbeat', target='_blank') music_breakbeat (hit_bit)
             i.fainfo.fab.fa-telegram
           li
             div.icon.web.telegram.org
-            a(href='https://t.me/music_hitok', target='_blank') t/music_HitOK (hit_bit)
+            a(href='https://t.me/music_hitok', target='_blank') music_HitOK (hit_bit)
             i.fainfo.fab.fa-telegram
       .group
         .group-title
