updates link shops

--- a/includes/media.pug
+++ b/includes/media.pug
@@ -41,10 +41,10 @@ block content
 
           li
             div.icon.web.telegram.org
-            a() Слушать и качать:
-            a(href='https://t.me/music_hitok', target='_blank') music_HitOK
+            a() Еще музыка:  
+            a(href='https://t.me/music_hitok', target='_blank') _music_HitOK_
             i.fainfo.fab.fa-telegram
-
+            
       .group
         .group-title
           span.badge.badge-success Ваше любимое видео!
@@ -100,6 +100,12 @@ block content
             #player_ua(style='height:60px;width:240px')
               script.
                 var player_ua = new Playerjs({id:"player_ua", file:"https://zakladki.github.io/playlist3ua.txt"});
+        
+          li
+            div.icon.web.telegram.org
+            a() Еще музыка:  
+            a(href='https://t.me/music_hitok', target='_blank') _music_HitOK_
+            i.fainfo.fab.fa-telegram
         
       .group
         .group-title
@@ -163,7 +169,13 @@ block content
             #player_ru(style='height:60px;width:240px')
               script.
                 var player_ru = new Playerjs({id:"player_ru", file:"https://zakladki.github.io/playlist2ru.txt"});
-                
+
+          li
+            div.icon.web.telegram.org
+            a() Еще музыка:  
+            a(href='https://t.me/music_hitok', target='_blank') _music_HitOK_
+            i.fainfo.fab.fa-telegram
+
       .group
         .group-title  
           span.badge.badge-success Радио онлайн
