--- a/includes/index.pug
+++ b/includes/index.pug
@@ -413,6 +413,56 @@ block content
             div.icontooinfo.a0repa3(title='ГАЗОВИЙ ЗАПАС - ПЛАТІТЬ ЗА ГАЗ ДО 25% МЕНШЕ. Побутові споживачі можуть зекономити до 25% на оплаті за газ', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.notino.com
+            a(href='https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o', target='_blank') notino.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві.', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.krauff.com
+            a(href='https://letyshops.com/r/krauff-ua-4qh7st7rujcwss', target='_blank') krauff.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества.', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.prego.ua
+            a(href='https://letyshops.com/r/prego-ua-4qh7st7rum0www', target='_blank') prego.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.ager.ua
+            a(href='https://letyshops.com/r/ager-ua-4qh7st7rur6s0o', target='_blank') ager.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день.', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.sneakerstudio.com.ua
+            a(href='https://letyshops.com/r/sneakerstudio-ua-4qh7st7rusqo0c', target='_blank') sneakerstudio.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.puccini.ua
+            a(href='https://letyshops.com/r/puccini-ua-4qh7st7rv9ycgw', target='_blank') puccini.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Чемоданы, галантерея, кожаные сумки по выгодной цене прямо от производителя. Широкий ассортимент дорожных сумок, кошельков, перчаток и мужских ремней в интернет-магазин Puccini', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.honestgoods.com.ua
+            a(href='https://letyshops.com/r/honestgoods-ua-4qh7st7rvbeoos', target='_blank') honestgoods.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Подгузники, памперсы, детское питание, детские книги. Интернет магазин детских товаров в Украине. Купить подгузники и детское питание с доставкой - Honest Goods﻿', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.lekos.com.ua
+            a(href='https://letyshops.com/r/lekos-ua-4qh7st7rvd6o88', target='_blank') lekos.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Купить наручные часы в Украине в Интернет-магазине наручных часов LEKOS', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.originalam.net
+            a(href='https://letyshops.com/r/originalam-4qh7st7rveecco', target='_blank') originalam.net`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Все для печати. Предлагаем купить СБПЧ для печатающих устройств Epson, Canon, HP и Brother, перезаправляемые картриджи (ПЗК) и фотобумага. Продажа принтеров, МФУ, плоттеров с установленной системой НПЧ. Мы также производим ремонт печатающих устройств любых фирм.', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.kivi.ua
+            a(href='https://letyshops.com/r/kivi-ua-4qh7st7rvfggg0', target='_blank') kivi.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Kivi (Ківі) - Smart телевізори та телебачення в Україні №1. Вибрати телевізор нового покоління KIVI. Купити Смарт тв з можливістю управління через смартфон. В телевізорах KIVI використовуються дисплеї топових конфігурацій від світових виробників. Подаруйте собі можливість насолоджуватись усіма кольорами і відтінками світу разом з KIVI', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.cardo.ua
             a(href='https://letyshops.com/r/cardo-4qh7st7rrpuso8', target='_blank') cardo.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине.', alt='')
@@ -433,19 +483,9 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.binance_com
-            a(href='https://www.binance.com/?ref=36762801', target='_blank') binance.com`
-            div.icontooinfo.a0repa3(title='Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.exmo_com
             a(href='https://exmo.com/?ref=1654818', target='_blank') exmo.com`
             div.icontooinfo.a0repa3(title='Раздел-Банкинг. Надежная биткоин биржа и трейдинг платформа стран СНГ', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.telemetr.me
-            a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
